blocks/product-main-brand-showcase/product-main-brand-showcase.css
.product-main-brand-showcase .product div:nth-child(1),
.product-main-brand-showcase-mirror .product div:nth-child(1) {
  display: flex;
  position: relative;
  line-height: 1;
  flex-direction: column;
}

.product-main-brand-showcase-mirror .product div:nth-child(1) {
  right: 2%;
}

/* Bullet */
.product-main-brand-showcase ul li,
.product-main-brand-showcase-mirror ul li {
  list-style-type: square;
  font-size: var(--sub-text-sub-title-size);
}
.product-main-brand-showcase ul li::marker {
  font-size: var(--sub-text-sub-title-size);
}

/* Brand Name */
.product-main-brand-showcase ul li a,
.product-main-brand-showcase-mirror ul li a {
  color: var(--sub-text-title-color);
  letter-spacing: var(--sub-text-spacing);
  font-size: var(--sub-text-title-size);
  text-transform: uppercase;
  font-weight: bold;
}

.product-main-brand-showcase ul li em a:hover,
.product-main-brand-showcase-mirror ul li em a:hover,
.product-main-brand-showcase .product div:nth-child(1) p a.button:hover,
.product-main-brand-showcase-mirror .product div:nth-child(1) p a.button:hover {
  text-decoration: none;
}

/* Brand Name and Shop now positioning */
.product-main-brand-showcase .product div:nth-child(1) ul,
.product-main-brand-showcase-mirror .product div:nth-child(1) ul {
  margin: 0;
  margin-top: 6%;
  margin-bottom: -4%;
  padding: auto;
  display: flex;
}

/* Shop Now button on top of image */
.product-main-brand-showcase .product div:nth-child(1) p a.button,
.product-main-brand-showcase-mirror .product div:nth-child(1) p a.button {
  border: none;
  background-color: transparent;
  text-transform: var(--sub-text-button-transform);
  font-size: var(--sub-text-secondary-size);
  color: var(--sub-text-grey);
  padding: auto 0%;
  margin: auto 1%;
  border-radius: 0;
}
/* End Shop Now button on top of image */

/* Main Picture */
.product-main-brand-showcase .product,
.product-main-brand-showcase-mirror .product {
  display: flex;
  position: relative;
  flex-direction: column;
  margin: auto;
  width: fit-content;
  max-width: auto;
  object-fit: cover;
}

.product-main-brand-showcase .product .image picture > img,
.product-main-brand-showcase-mirror .product .image picture > img {
  display: flex;
  width: auto;
  height: auto;
  object-fit: contain;
}

/* End Main Picture */
.product-main-brand-showcase .product .image picture > img,
.product-main-brand-showcase-mirror .product .image picture > img {
  margin: 0 auto;
  width: 700px;
  height: 700px;
  height: auto;
  object-fit: contain;
}

.featured-bestseller-post {
  flex-wrap: nowrap;
}

.featured-bestseller-post p:nth-child(2) a {
  visibility: hidden;
  padding-top: 4%;
}

.featured-bestseller-post ul {
  padding: 0 4%;
}

.featured-bestseller-post div div {
  padding: 0 2%;
}

@media (600px < width <= 1024px) {
  .product-main-brand-showcase-wrapper
    .product-main-brand-showcase-mirror-wrapper {
    display: flex;
    margin: 0 auto;
    justify-content: flex-start;
    align-items: flex-start;
    left: 0;
    padding: 0;
  }

  .product-main-brand-showcase .product .image picture > img,
  .product-main-brand-showcase-mirror .product .image picture > img {
    height: auto;
    width: 70vw;
  }
}

@media (width <= 600px) {
  /* Main Picture */
  .product-main-brand-showcase .product .image picture > img,
  .product-main-brand-showcase-mirror .product .image picture > img {
    height: auto;
    width: 90vw;
  }

  .product-main-brand-showcase-mirror .btn-on-img p {
    right: -1.5%;
  }

  /* Brand Name */
  .product-main-brand-showcase-mirror .product div:nth-child(1) ul {
    padding-left: 7%;
  }

  /* Shop now */
  .product-main-brand-showcase-mirror .product div:nth-child(1) p a.button {
    padding-left: 7%;
  }
}

